--- a/src/css/style.css
+++ b/src/css/style.css
@@ -76,9 +76,9 @@ header {
     overflow: hidden;
     background-color: #333;
     /* You'll need to mess with this a bit to get your camera to work. Replace the url with a live-updating image feed from your camera. Using other camera streaming systems will require some tweaking. */
-    background-image: url('http://10.0.78.78:1182');
+    background-image: url('http://10.0.78.78:1182/stream.mjpg');
     background-position: center; /* Center the image */
-    background-repeat: no-repeat; /* Do not repeat the image */
+    background-repeat: repeat; /* Do not repeat the image */
     background-size: contain;
     text-align: center;
 }
@@ -90,9 +90,9 @@ header {
     width: 40%;    /*Percent of viewport*/
     height: 80vh;
     overflow: hidden;
-    background-color: rgb(155, 12, 12);
+    background-color: #333;
     /* You'll need to mess with this a bit to get your camera to work. Replace the url with a live-updating image feed from your camera. Using other camera streaming systems will require some tweaking. */
-    background-image: url('http://10.0.78.78:1181');
+    background-image: url('http://10.0.78.78:1181/stream.mjpg');
     background-position: center; /* Center the image */
     background-repeat: no-repeat; /* Do not repeat the image */
     background-size: contain;
